# news-api-rust

./: .env.example  Cargo.toml  README.md  diesel.toml
migrations/2025-01-09-075107_users/: up.sql
migrations/2025-01-09-083149_news/: down.sql  up.sql
migrations/2025-01-09-085438_create_categories/: up.sql
migrations/2025-01-09-090848_create_news_categories/: down.sql  up.sql
src/: db.rs  main.rs  routes.rs  schema.rs
src/handlers/: admin.rs  auth.rs  mod.rs  news.rs
src/middleware/: admin.rs  auth.rs  mod.rs
src/models/: category.rs  mod.rs  news.rs  user.rs
src/test/: auth.rs  category.rs  mod.rs  news.rs  test_utils.rs
src/utils/: error_response.rs  jwt.rs  mod.rs
test/: news_test.rs  setup.rs
