[package]
name = "news-rest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
diesel = "2.2.6"
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
postgres = "0.19.9"
r2d2 = "0.8.10"
serde = { version = "1.0.217", features = ["derive"] }
tokio = "1.43.0"
uuid = { version = "1.11.0", features = ["v4"] }
