[package]
name = "news-rest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.9.0"
bcrypt = "0.16.0"
chrono = { version = "0.4.39", features = ["serde"] }
diesel = { version = "2.2.6", features = ["r2d2", "postgres", "chrono"]}
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15.7"
postgres = "0.19.9"
r2d2 = "0.8.10"
serde = { version = "1.0.217", features = ["derive"] }
tokio = "1.43.0"
uuid = { version = "1.11.0", features = ["v4"] }
