[package]
name = "news-rest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.9.0"
bcrypt = "0.16.0"
chrono = { version = "0.4.39", features = ["serde"] }
derive_more = { version = "1.0", features = ["display", "clone"] }
diesel = { version = "2.2.6", features = ["r2d2", "postgres", "chrono"]}
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15.7"
futures = "0.3.31"
jsonwebtoken = "9.3.0"
postgres = "0.19.9"
r2d2 = "0.8.10"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = "1.43.0"
uuid = { version = "1.11.0", features = ["v4"] }
validator = { version = "0.19.0", features = ["derive"] }
